--- a/public/index.html
+++ b/public/index.html
@@ -3,11 +3,20 @@
   <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <meta name="theme-color" content="#000000" />
     <meta
       name="description"
       content="Web site created using create-react-app"
     />
+    <!-- These favicons were generated with https://realfavicongenerator.net/ -->
+    <meta name="msapplication-TileColor" content="#da532c">
+    <meta name="msapplication-config" content="%PUBLIC_URL%/favicons/browserconfig.xml">
+    <meta name="theme-color" content="#333333">
+    <link rel="apple-touch-icon" sizes="144x144" href="%PUBLIC_URL%/favicons/apple-touch-icon.png">
+    <link rel="icon" type="image/png" sizes="32x32" href="%PUBLIC_URL%/favicons/favicon-32x32.png">
+    <link rel="icon" type="image/png" sizes="16x16" href="%PUBLIC_URL%/favicons/favicon-16x16.png">
+    <link rel="manifest" href="%PUBLIC_URL%/favicons/site.webmanifest">
+    <link rel="mask-icon" href="%PUBLIC_URL%/favicons/safari-pinned-tab.svg" color="#d9251b">
+    <link rel="shortcut icon" href="%PUBLIC_URL%/favicons/favicon.ico">
     <title>Whare's Waldo</title>
   </head>
   <body>
